Fixed centering of thumbnail style images. Now vertically align also.

--- a/part2/css/art-view.css
+++ b/part2/css/art-view.css
@@ -60,8 +60,11 @@ p {
   height: auto;
   max-height: 100%;
   overflow: hidden;
-  margin: auto;
   vertical-align: middle;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .art-image-display {
   width: auto;
@@ -90,8 +93,9 @@ p {
 }
 
 .no-block{
+  position : absolute;
   float: left;
-  display : inline-block;
+  display : block;
   height: 100px;
   width: 100px;
   text-align : center;
